Updated for SEO & Social Media

--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
   <meta charset="UTF-8" />
   <title>Paradigm Toys – Skill Toys. Puzzles. Fidgets.</title>
 
-  <meta name="description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking durable, well-crafted tactile toys." />
+  <meta name="description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking a unique, tactile experience." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <link rel="icon" href="assets/icons/favicon.svg" type="image/svg">
   <link rel="stylesheet" href="assets/style.css">
+
+  <!-- Social Media Card -->>
+  <meta property="og:title" content="Paradigm Toys – Skill Toys. Fidgets. Puzzles.">
+  <meta property="og:description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking a unique, tactile experience.">
+  <meta property="og:image" content="https://www.paradigmtoys.com/assets/logo/Social Card (Color).png">
+  <meta property="og:url" content="https://www.paradigmtoys.com">
+  <meta property="og:type" content="website">
+
+
+  <!-- Structured Business Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Paradigm Toys",
+    "url": "https://www.paradigmtoys.com",
+    "logo": "https://www.paradigmtoys.com/assets/logo/Color Logo Subtext.png",
+    "sameAs": [
+      "https://www.etsy.com/shop/ParadigmToys"
+    ]
+  }
+</script>
 </head>
 <body>
 
@@ -35,14 +57,21 @@
 </header>
 
 <main class="hero">
+
+  <h1 class="visually-hidden">Paradigm Toys – Skill Toys, Fidgets, and Puzzles</h1>
+  <h2 class="visually-hidden"> High-quality Skill Toys, Fidgets & Puzzles</h2>
+
   <div class="hero-content">
-    <img src="assets/logo/Color Logo Subtext.png" alt="Paradigm Toys Logo" class="hero-logo">
+    <img src="assets/logo/Color Logo Subtext.png" 
+      alt="Paradigm Toys Logo – Skill Toys, Fidgets, Puzzles"
+      class="hero-logo"
+    >
     
     <!-- Minimal button below the logo -->
-    <a href="https://etsy.com/shop/ParadigmToys" class="hero-button">
+    <a href="https://etsy.com/shop/ParadigmToys" class="hero-button" rel="noopener">
       <img
       src="assets/icons/shop.svg"
-      alt=""
+      alt="Paradigm Toys Logo – Skill Toys, Fidgets, Puzzles"
       class="button-icon"
       aria-hidden="true"
       >
