--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="assets/icons/favicon.svg" type="image/svg">
   <link rel="stylesheet" href="assets/style.css">
 
-  <!-- Social Media Card -->>
+  <!-- Social Media Card -->
   <meta property="og:title" content="Paradigm Toys – Skill Toys. Fidgets. Puzzles.">
   <meta property="og:description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking a unique, tactile experience.">
   <meta property="og:image" content="https://www.paradigmtoys.com/assets/logo/Social Card (Color).png">
@@ -30,8 +30,8 @@
   }
 </script>
 </head>
-<body>
 
+<body>
 <header class="top-bar">
   <div class="scroll-container">
     <div class="scroll-track">
@@ -43,14 +43,14 @@
         PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
         PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
       </span>
-        <span>
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      </span>
+      <span>
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+    </span>
     </div>
   </div>
 </header>
@@ -81,7 +81,6 @@
 
   <footer class="site-footer">
     © <span id="year"></span> Paradigm Toys
-  
       <img
       src="assets/logo/Flat Logo Reduced.png"
       alt="Paradigm Toys"
