Favicon Added to Root

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking a unique, tactile experience." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="assets/icons/favicon.svg" type="image/svg">
+  <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="assets/style.css">
 
   <!-- Social Media Card -->
