Updated scrolling text content & speed

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
   <div class="scroll-container">
     <div class="scroll-track">
       <span>
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
       </span>
       <span>
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM TOYS • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
     </span>
     </div>
   </div>
