Updated Link to social Card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Social Media Card -->
   <meta property="og:title" content="Paradigm Toys – Skill Toys. Fidgets. Puzzles.">
   <meta property="og:description" content="Paradigm Toys offers high-quality skill toys, fidgets, and puzzles for enthusiasts seeking a unique, tactile experience.">
-  <meta property="og:image" content="https://www.paradigmtoys.com/assets/logo/Social Card (Color).png">
+  <meta property="og:image" content="https://www.paradigmtoys.com/assets/logo/SocialCard.png">
   <meta property="og:url" content="https://www.paradigmtoys.com">
   <meta property="og:type" content="website">
 
