Updated Scroll Text & Mobile Button Radius

--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
   <div class="scroll-container">
     <div class="scroll-track">
       <span>
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
       </span>
       <span>
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
-      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
+        Skill Toys. Puzzles. Fidgets. 
     </span>
     </div>
   </div>
