--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
   </div>
 </header>
 
+<nav class="navbar">
+  <div class="nav-inner">
+    
+    <!-- Logo on the left -->
+    <a href="#home" class="nav-logo">
+      <img src="assets/logo/Nav-Bar-Logo.png" alt="Paradigm Toys Logo" />
+    </a>
+
+    <!-- Centered links -->
+    <div class="nav-links">
+      <a href="#home">Home</a>
+      <a href="#products">Products</a>
+      <a href="https://www.etsy.com/shop/ParadigmToys#about" target="_blank" rel="noopener">About</a>
+    </div>
+  </div>
+</nav>
+
 <main class="hero">
 
   <h1 class="visually-hidden">Paradigm Toys – Skill Toys, Fidgets, and Puzzles</h1>
