--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
   <div class="scroll-container">
     <div class="scroll-track">
       <span>
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+        PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
       </span>
       <span>
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
-        Skill Toys. Puzzles. Fidgets. 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
+      PARADIGM • SKILL TOYS • FIDGETS • PUZZLES • 
     </span>
     </div>
   </div>
